#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([rtime],
	[1.0],
	[paolorovelli@yahoo.it])
AM_INIT_AUTOMAKE([rtime],1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for source files.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Configuration files (makefiles).
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

